--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <body>
         <header>
             <img class="logo" src="./img/logo.svg" alt="logo" />
-            <nav>
-                <ul class="navlinks">
-                    <li><a href="#" class="inicio">Inicio</a></li>
-                    <li><a href="#" class="clientes">Clientes</a></li>
-                    <li><a href="#" class="nosotros">Nosotros</a></li>
-                    <li><a href="#" class="contacto">Contacto</a></li>
-                </ul>
+            <nav class="navlinks">
+                <span><a href="#" class="inicio">Inicio</a></span>
+                <span><a href="#" class="clientes">Clientes</a></span>
+                <span><a href="#" class="nosotros">Nosotros</a></span>
+                <span><a href="#" class="contacto">Contacto</a></span>
             </nav>
             <p>WebDev</p>
         </header>
