--- a/index.html
+++ b/index.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./styles.css" />
-    </head>
-    <body>
-        <header>
-            <img class="logo" src="./img/logo.svg" alt="logo" />
-            <nav class="navlinks">
-                <span><a href="#" class="inicio">Inicio</a></span>
-                <span><a href="#" class="clientes">Clientes</a></span>
-                <span><a href="#" class="nosotros">Nosotros</a></span>
-                <span><a href="#" class="contacto">Contacto</a></span>
-            </nav>
-            <p>WebDev</p>
-        </header>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <header>
+      <img class="logo" src="./img/logo.svg" alt="logo" />
+      <nav class="navlinks">
+        <span><a href="#">Home</a></span>
+        <span><a href="#">Work</a></span>
+        <span><a href="#">Us</a></span>
+        <span><a href="#">Services</a></span>
+      </nav>
+      <p>WebDev</p>
+    </header>
+    <main>
+      <section id="hero">
+        <div class="heroinfo">
+          <h1>Web development services</h1>
+          <p>
+            <b>ZiSu.-</b> WebDev team is an innovative firm of front-end and
+            back-end development. We build solutions for companies and individuals all
+            around the world so you can have many reasons to trust us your webpage.
+          </p>
+        </div>
+        <div class="heroright">
+          <img class="heroimg" src="./img/monitor.svg" alt="heroimg"></img>
+          <a href="#">Start Now!</a>
+        </div>
+        
+      </section>
+      <section id="about">
+        <h2>Our Values</h2>
+        <div class="aboutbottom">
+          <div class="valuecard">
+            <h3>Speed</h3>
+            <p>We know that the most valued asset is time, that's why we focus on delivering our solutions and webpages on the agreed time and if we don't you get a 25% refund.</p>
+          </div>
+          <div class="valuecard">
+            <h3>Inclusion</h3>
+            <p>We believe in the inclusion of all people regardless gender, race, beliefs, etc. We ensure that at least 50% of our staff are people who have difficulties getting a job and we actively donate part of our income to LGBTIQA+ organizations and Help the Homeless organizations.</p>
+          </div>
+          <div class="valuecard">
+            <h3>Organization</h3>
+            <p>We make use of organization systems like kanban the 5s, etc. We also use Git and GitHub repositories so we can have a better organization of all the work that is done.</p>
+          </div>
+          <div class="valuecard">
+            <h3>Affordable</h3>
+            <p>We value Start-Ups and the people behind them, that's why we offer more flexibilization on the needs of those start-ups and individuals who don't need the latest technologies and security methods of an established enterprise.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
