--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <header>
-      <img class="logo" src="./img/logo.svg" alt="logo" />
-      <nav class="navlinks">
-        <span><a href="#">Home</a></span>
-        <span><a href="#">Work</a></span>
-        <span><a href="#">Us</a></span>
-        <span><a href="#">Services</a></span>
+      <nav class="navbar">
+        <img class="logo" src="./img/logo.svg" alt="logo" />
+        <nav class="navlinks">
+          <span><a href="#">Home</a></span>
+          <span><a href="#">Work</a></span>
+          <span><a href="#">Us</a></span>
+          <span><a href="#">Services</a></span>
+        </nav>
+        <p>WebDev</p>
       </nav>
-      <p>WebDev</p>
     </header>
     <main>
       <section id="hero">
@@ -23,37 +29,93 @@
           <h1>Web development services</h1>
           <p>
             <b>ZiSu.-</b> WebDev team is an innovative firm of front-end and
-            back-end development. We build solutions for companies and individuals all
-            around the world so you can have many reasons to trust us your webpage.
+            back-end development. We build solutions for companies and
+            individuals all around the world so you can have many reasons to
+            trust us your webpage.
           </p>
         </div>
         <div class="heroright">
-          <img class="heroimg" src="./img/monitor.svg" alt="heroimg"></img>
           <a href="#">Start Now!</a>
         </div>
-        
       </section>
+
       <section id="about">
+        <h2>About Us</h2>
+        <p>
+          We started this firm in 2023 while we were learning Web Programming on
+          <strong>NUCBA</strong>
+        </p>
+      </section>
+
+      <section id="cards">
         <h2>Our Values</h2>
-        <div class="aboutbottom">
+        <div class="cardsbottom">
           <div class="valuecard">
             <h3>Speed</h3>
-            <p>We know that the most valued asset is time, that's why we focus on delivering our solutions and webpages on the agreed time and if we don't you get a 25% refund.</p>
+            <p>
+              We know that the most valued asset is time, that's why we focus on
+              delivering our solutions and webpages on the agreed time and if we
+              don't you get a 25% refund.
+            </p>
           </div>
           <div class="valuecard">
             <h3>Inclusion</h3>
-            <p>We believe in the inclusion of all people regardless gender, race, beliefs, etc. We ensure that at least 50% of our staff are people who have difficulties getting a job and we actively donate part of our income to LGBTIQA+ organizations and Help the Homeless organizations.</p>
+            <p>
+              We believe in the inclusion of all people regardless gender, race,
+              beliefs, etc. We ensure that at least 50% of our staff are people
+              who have difficulties getting a job and we actively donate part of
+              our income to LGBTIQA+ organizations and Help the Homeless
+              organizations.
+            </p>
           </div>
           <div class="valuecard">
             <h3>Organization</h3>
-            <p>We make use of organization systems like kanban the 5s, etc. We also use Git and GitHub repositories so we can have a better organization of all the work that is done.</p>
+            <p>
+              We make use of organization systems like kanban the 5s, etc. We
+              also use Git and GitHub repositories so we can have a better
+              organization of all the work that is done.
+            </p>
           </div>
           <div class="valuecard">
             <h3>Affordable</h3>
-            <p>We value Start-Ups and the people behind them, that's why we offer more flexibilization on the needs of those start-ups and individuals who don't need the latest technologies and security methods of an established enterprise.</p>
+            <p>
+              We value Start-Ups and the people behind them, that's why we offer
+              more flexibilization on the needs of those start-ups and
+              individuals who don't need the latest technologies and security
+              methods of an established enterprise.
+            </p>
           </div>
         </div>
       </section>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <div class="contactbottom">
+          <ul>
+            <li><i class="material-symbols-outlined">Call</i>11-6786-2342</li>
+            <li><i class="material-symbols-outlined">Public</i>@zisu.ok</li>
+            <li>
+              <i class="material-symbols-outlined">Pin_Drop</i>Elpidio Gonzalez
+              3567
+            </li>
+          </ul>
+          <div>
+            <iframe
+              width="500"
+              height="400"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+              src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=es&amp;q=Elpidio%20gonzalez%203567+(Zisu%20WebDev)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+              ><a href="https://www.gps.ie/car-satnav-gps/">Sat Navs</a></iframe
+            >
+          </div>
+        </div>
+      </section>
+
+      <footer id="footer">
+        <img src="img/logo.svg" alt="footer_logo" />
+      </footer>
     </main>
   </body>
 </html>
