--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <header>
+      <img class="logo" src="./img/logo.svg" alt="logo" />
       <nav class="navbar">
-        <img class="logo" src="./img/logo.svg" alt="logo" />
+        <label for="menu-toggle" class="menu-label">
+          <i class="material-symbols-outlined">Menu</i>
+        </label>
+        <input type="checkbox" id="menu-toggle" />
         <nav class="navlinks">
           <span><a href="#">Home</a></span>
           <span><a href="#">Work</a></span>
